connected API and added a temporary clueview1 link

--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -1,1 +1,9 @@
 <p>This is the clueview1 view.</p>
+
+<div  ng-controller="YelpapiCtrl">
+      <ul>
+          <li data-ng-repeat="business in businesses">
+              {{business.name}}
+          </li>
+      </ul>
+  </div>
