--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -1,34 +1,8 @@
-
 <p>This is the clueview1 view.</p>
-<div id="map"></div>
-<script>
-var map;
-function initMap() {
-  map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: 43, lng: -83},
-    zoom: 13,
-    disableDefaultUI: true,
-    draggable: false,
-    disableDoubleClickZoom: true,
-    keyboardShortcuts: false,
-    overviewMapControl: false,
-    scrollwheel: false
-  });
-var cityCircle = new google.maps.Circle({
-    strokeColor: '#98ddde',
-    strokeOpacity: 0.8,
-    strokeWeight: 2,
-    fillColor: '#98ddde',
-    fillOpacity: 0.35,
-    map: map,
-    center: {lat: 43, lng: -83},
-    radius: 1200
-  });
 
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5tSIIIIwNPatlpvr-tn-Ag3DaN29XURw&callback=initMap"> </script>
-
+<div ng-controller="Clueview1Ctrl">
+  <div id ="map"></div>
+</div>
 <div  ng-controller="YelpapiCtrl">
       <p ng-show="count===1">
       {{category}}
