--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -9,13 +9,11 @@
 
       </p>
       <p ng-show="count===2">
-        <!-- {{snippetReplaced}} -->
-        {{latitude}}
+      {{snippetReplaced}}
       <p ng-show="count===3"><img ng-src="{{imgurl}}">
       </p>
       <p ng-show="count===4">
-        <!-- {{street}} -->
-        {{longitude}}
+        {{street}}
       </p>
       <p ng-show="count===5">
       {{shuffledName}}
@@ -26,6 +24,6 @@
 
 
 
-      <button id= "hint" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
-
+      <button id= "hint" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
+      <a class="btn btn-lg btn-success" ng-href="#/clueview2">Skip<span class="glyphicon glyphicon-ok"></span></a>
   </div>
