--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -1,20 +1,29 @@
 <p>This is the clueview3 view.</p>
 
-<div  ng-controller="YelpapiCtrl">
+<div ng-controller="Clueview2Ctrl">
+  <div id ="map"></div>
+  </div>
+  <div  ng-controller="YelpapiCtrl">
       <p ng-show="count===1">
       {{category}}
+
       </p>
       <p ng-show="count===2">
-        {{snippetReplaced}}
+      {{snippetReplaced}}
       <p ng-show="count===3"><img ng-src="{{imgurl}}">
       </p>
-      <p ng-show="count===4">{{street}}
+      <p ng-show="count===4">
+        {{street}}
       </p>
       <p ng-show="count===5">
       {{shuffledName}}
     </p>
 
+    <p>POINTS:</p>
+    <div id="points">100</div>
 
 
-      <button ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
+
+      <button id= "hint" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
+      <a class="btn btn-lg btn-success" ng-href="#/clueview2">Skip<span class="glyphicon glyphicon-ok"></span></a>
   </div>
