--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,8 @@
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Welcome!</h1>
   <p class="lead">
-    Always a pleasure scaffolding your apps.
+    When you're ready to begin your scavenger hunt, be sure your GPS is turned on and click start!
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/clueview1">Start Hunt!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
 </div>
