checking current location against destination

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,14 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   width: 400px;
 }
 
+img {
+  width: 25%;
+}
+
+.class {
+  font-size: 24px;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
