--- a/app/views/clueview2.html
+++ b/app/views/clueview2.html
@@ -26,6 +26,6 @@
 
 
       <button id= "hint" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
-      <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check my location<span class="glyphicon glyphicon-ok"></span></a>
+      <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In!<span class="glyphicon glyphicon-ok"></span></a>
       <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview3">Skip<span class="glyphicon glyphicon-ok"></span></a>
   </div>
