added share button to modal

--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -26,7 +26,7 @@
 </div>
 <br>
 
-<!-- <div ng-controller="Clueview3Ctrl"> -->
+<div ng-controller="Clueview3Ctrl">
   <div id ="map"></div>
 
   <div  ng-controller="YelpapiCtrl">
@@ -58,7 +58,10 @@
         <div class="modal-content">
           <span class="close">x</span>
           <h1 id="totalPoints">Total Points: 100</h1>
-
+					<div class="fb-share-button"
+							data-href="http://www.facebook.com"
+							data-layout="button_count">
+					</div>
           <p><a id="clicker" ng-href="#/main">Click to play again.</a></p>
           <!-- Load Facebook SDK for JavaScript -->
         </div>
