--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -1,5 +1,4 @@
-<p>This is the clueview3 view.</p>
-
+<p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 <div ng-controller="Clueview3Ctrl">
   <div id ="map"></div>
   </div>
