--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -1,35 +1,30 @@
-<p>This is the clueview1 view.</p>
+<p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 
 <div ng-controller="Clueview1Ctrl">
   <div id ="map"></div>
 </div>
-<div  ng-controller="YelpapiCtrl">
-      <p class="clue" ng-show="count===1">
-      {{category}}
+<div  ng-controller="YelpapiCtrl as vm">
+  <p class="clue" ng-show="count===1">
+  {{category}}
 
-      </p>
-      <p class= "clue" ng-show="count===2">
-      {{snippetReplaced}}
-      <p class="clue"ng-show="count===3"><img ng-src="{{imgurl}}">
-      </p>
-      <p class="clue" ng-show="count===4">
-        {{street}}
-      </p>
-      <p class="clue" ng-show="count===5">
-      {{shuffledName}}
-    </p>
+
+  </p>
+  <p class= "clue" ng-show="count===2">
+  {{snippetReplaced}}
+  <p class="clue"ng-show="count===3"><img ng-src="{{imgurl}}">
+  </p>
+  <p class="clue" ng-show="count===4">
+    {{street}}
+  </p>
+  <p class="clue" ng-show="count===5">
+  {{shuffledName}}
+  </p>
+
 
     <p>POINTS:</p>
-
-
     <div id="points">100</div>
 
-
-
-      <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In!<span class="glyphicon glyphicon-ok"></span></a>
-
-      <button id= "hint" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
-      <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview2">Skip<span class="glyphicon glyphicon-ok"></span></a>
-    
+        <button id= "hint" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
+          <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In!<span class="glyphicon glyphicon-ok"></span></a>
+          <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview2">Skip<span class="glyphicon glyphicon-ok"></span></a>
   </div>
-</div>
