attempted to fix facebook share

--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -58,11 +58,17 @@
         <div class="modal-content">
           <span class="close">x</span>
           <h1 id="totalPoints">Total Points: 100</h1>
+
+					<li><fb:login-button autologoutlink="true"></fb:login-button></li>
+
+					<li>
 					<div class="fb-share-button"
-							data-href="http://www.facebook.com"
-							data-layout="button_count">
-					</div>
+					data-href="http://www.facebook.com"
+					data-layout="button_count"></div>
+					</li>
+
           <p><a id="clicker" ng-href="#/main">Click to play again.</a></p>
-          <!-- Load Facebook SDK for JavaScript -->
         </div>
       </div>
+		</div>
+	</div>
