--- a/app/views/clueview20.html
+++ b/app/views/clueview20.html
@@ -1,11 +1,20 @@
+<p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 
 <div ng-controller="Clueview2Ctrl">
+
+
 <div  ng-controller="YelpapiCtrl as vm">
 
-  <p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
-
-<h3>Good luck catching your first ButterFly!</h3>
+<h3>Can you find the second ButterFly?</h3>
 <div class="nav-progress">
+	<div class="complete">
+		εїз
+    <div class="arrow-wrapper">
+      <div class="arrow-cover">
+        <div class="arrow"></div>
+      </div>
+    </div>
+	</div>
 	<div class="active">
 		εїз
     <div class="arrow-wrapper">
@@ -16,30 +25,19 @@
 	</div>
 	<div>
 		εїз
-    <div class="arrow-wrapper">
-      <div class="arrow-cover">
-        <div class="arrow"></div>
-      </div>
-    </div>
-	</div>
-	<div>
-		εїз
 	</div>
 </div>
 <br>
+
   <div id ="map"></div>
 
+  <p class="clue" ng-show="count===1">
+  {{category}}
 
-<br>
 
-
-
-<p class="clue" ng-show="count===1">
-{{category}}
-</p>
+  </p>
   <p class= "clue" ng-show="count===2">
   {{snippetReplaced}}
-</p>
   <p class="clue"ng-show="count===3"><img ng-src="{{imgurl}}">
   </p>
   <p class="clue" ng-show="count===4">
@@ -50,11 +48,13 @@
   </p>
 
 
-    <div id="points1">100</div>
+    <p>POINTS:</p>
+    <div id="points2">100</div>
 
+
+      <button id= "hint2" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
       <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In!<span class="glyphicon glyphicon-ok"></span></a>
-      <button id= "hint1" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
-      <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview2">Skip<span class="glyphicon glyphicon-ok"></span></a>
+      <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview3">Skip<span class="glyphicon glyphicon-ok"></span></a>
+
 
   </div>
-</div>
