--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -47,7 +47,7 @@
     		<p>POINTS:</p>
 				<div id="points3">100</div>
 					<button id= "hint3" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0"> Give me a hint </button>
-					<a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In!<span class="glyphicon glyphicon-ok"></span></a>
+					<a class="btn btn-lg btn-success" ng-init = "view3 = true" ng-click= "checkGeoClick()">Check In!<span class="glyphicon glyphicon-ok"></span></a>
 
       <!-- Trigger/Open The Modal -->
       <button class="btn btn-lg btn-success" id="myBtn">Skip</button>
