--- a/app/views/modal-view-winning.html
+++ b/app/views/modal-view-winning.html
@@ -1,9 +1,10 @@
+<div ng-controller="YelpapiCtrl">
 <div class="modal-header">
-    <h3 class="modal-title">Congratulations!  You made it!</h3>
+    <h3 class="modal-title">  <img src="images/Badge-icon.png"><br> Congratulations!  You made to {{fullname}}.</h3>
 </div>
 <div class="modal-body">
-    Play another game.  Share your trip to Facebook.
+   <a class="btn btn-lg btn-success" ng-href="#/main" ng-click="vm.close()">Play again</span></a>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-info" ng-click="vm.close()">Close</button>
+    <button class="btn btn-info" ng-click="vm.close()"><span class="glyphicon glyphicon-remove"></span></button>
 </div>
