--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -2,9 +2,10 @@
 <div ng-controller="Clueview2Ctrl">
 <div  ng-controller="YelpapiCtrl as vm">
 
-  <p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
+
 
 <h3>Good luck catching your first ButterFly!</h3>
+<p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 <div class="nav-progress">
 	<div class="active">
 		εїз
@@ -28,12 +29,7 @@
 </div>
 <br>
   <div id ="map"></div>
-
-
 <br>
-
-
-
 <p class="clue" ng-show="count===1">
 {{category}}
 </p>
@@ -48,13 +44,12 @@
   <p class="clue" ng-show="count===5">
   {{shuffledName}}
   </p>
-
-
+  <p class="clue" ng-show="count===6">
+  You're out of hints!
+  </p>
     <div id="points1">100</div>
-
-      <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In!<span class="glyphicon glyphicon-ok"></span></a>
-      <button id= "hint1" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Give me a hint</button>
-      <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview2">Skip<span class="glyphicon glyphicon-ok"></span></a>
-
+      <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
+      <button id= "hint1" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Hint</button>
+      <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview2">Skip</span></a>
   </div>
 </div>
