--- a/app/views/winningview.html
+++ b/app/views/winningview.html
@@ -1,3 +1,11 @@
-<p>This is the winningview view.</p>
-<img src="http://vignette1.wikia.nocookie.net/glee/images/b/b6/I%27m_winning.gif/revision/latest?cb=20140403233726" width="500px" autoplay loop />
-
+<div ng-controller="YelpapiCtrl">
+<div class="modal-header">
+    <h3 class="modal-title">  <img src="images/Badge-icon.png"> <img src="images/Badge-icon.png"> <img src="images/Badge-icon.png"><br>
+      <br> Congratulations!  You made to {{fullname}}. You completed the scavenger hunt!</h3>
+</div>
+<div class="modal-body">
+  <a class="btn btn-lg btn-success" ng-href="#/main" ng-click="vm.close()">Play again</span></a>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-info" ng-click="vm.close()"><span class="glyphicon glyphicon-remove"></span></button>
+</div>
