--- a/app/views/clueview2.html
+++ b/app/views/clueview2.html
@@ -1,10 +1,7 @@
-<p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
-
 <div ng-controller="Clueview2Ctrl">
-
 <div  ng-controller="YelpapiCtrl as vm">
-
 <h3>Can you find the second ButterFly?</h3>
+<p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 <div class="nav-progress">
 	<div class="complete">
 		εїз
@@ -48,7 +45,7 @@
     <div id="points2">100</div>
     <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
     <button id= "hint2" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Hint</button>
-    <a id= "skip" class="btn btn-lg btn-success" ng-href="#/clueview3">Skip</span></a>
+    <a id= "skip" class="btn btn-lg btn-success" ng-click="reloadRoute()">Skip</span></a>
 
 
   </div>
