fixed progress bar color

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,9 +9,9 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 }
 
 //styling for progress bar
-$primary-color: #2ecc71;
+$primary-color: #5cb85c;
 $nav-border-color: #27ae60;
-$nav-bg-color: #2ecc71;
+$nav-bg-color: #5cb85c;
 $bg-color: #f7f7f7;
 @mixin border-radius($radius) {
 	-webkit-border-radius: $radius;
