--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -7,7 +7,7 @@
 <h3>Good luck catching your first ButterFly!</h3>
 <p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 <div class="nav-progress">
-	<div class="active">
+	<div class="active icon">
 		εїз
     <div class="arrow-wrapper">
       <div class="arrow-cover">
@@ -15,7 +15,7 @@
       </div>
     </div>
 	</div>
-	<div>
+	<div class = "icon">
 		εїз
     <div class="arrow-wrapper">
       <div class="arrow-cover">
@@ -23,7 +23,7 @@
       </div>
     </div>
 	</div>
-	<div>
+	<div class = "icon">
 		εїз
 	</div>
 </div>
@@ -47,7 +47,6 @@
   <p class="clue" ng-show="count===6">
   You're out of hints!
   </p>
-    <div id="points1">100</div>
       <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
       <button id= "hint1" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Hint</button>
       <a id= "skip" class="btn btn-lg btn-success" ng-click="reloadRoute()">Skip</span></a>
