added butterfly image and fixed winning modal

--- a/app/views/modalview.html
+++ b/app/views/modalview.html
@@ -3,5 +3,5 @@
 </div>
 
 <div class="modal-footer">
-    <button class="btn btn-info" ng-click="vm.close()">Close</button>
+    <button class="btn btn-info" ng-click="vm.close()"><span class="glyphicon glyphicon-remove"></span></button>
 </div>
