--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="Clueview1Ctrl">
+<div ng-controller="Clueview1Ctrl" ng-init="view=1">
 <div  ng-controller="YelpapiCtrl as vm">
 
 
@@ -48,7 +48,7 @@
   You're out of hints!
   </p>
       <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
-      <button id= "hint1" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Hint</button>
+      <button id= "hint1" class="btn btn-lg btn-success" ng-init = "view1 = true" ng-click="count = count + 1" ng-init="count=0">Hint</button>
       <a id= "skip" class="btn btn-lg btn-success" ng-click="reloadRoute()">Skip</span></a>
   </div>
 </div>
