--- a/app/views/modal-view-winning.html
+++ b/app/views/modal-view-winning.html
@@ -1,6 +1,6 @@
 <div ng-controller="YelpapiCtrl">
 <div class="modal-header">
-    <h3 class="modal-title">  <img src="images/Badge-icon.png"><br> Congratulations!  You made to {{fullname}}.</h3>
+    <h3 class="modal-title">  <img src="images/Badge-icon.png"><br> Congratulations!  You made it to {{fullname}}.</h3>
 </div>
 <div class="modal-body">
    <a class="btn btn-lg btn-success" ng-href="#/clueview2" ng-click="vm.close()">Next Destination!</span></a>
