--- a/app/views/winningview.html
+++ b/app/views/winningview.html
@@ -1,7 +1,7 @@
 <div ng-controller="YelpapiCtrl">
 <div class="modal-header">
     <h3 class="modal-title">  <img src="images/Badge-icon.png"> <img src="images/Badge-icon.png"> <img src="images/Badge-icon.png"><br>
-      <br> Congratulations!  You made to {{fullname}}. You completed the scavenger hunt!</h3>
+      <br> Congratulations!  You made it to {{fullname}}. You completed the scavenger hunt!</h3>
 </div>
 <div class="modal-body">
   <a class="btn btn-lg btn-success" ng-href="#/main" ng-click="vm.close()">Play again</span></a>
