added search feature on landing page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,9 +9,9 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 }
 
 //styling for progress bar
-$primary-color: #5cb85c;
-$nav-border-color: #27ae60;
-$nav-bg-color: #5cb85c;
+$primary-color: #5bc0de;
+$nav-border-color: #5bc0de;
+$nav-bg-color: #5bc0de;
 $bg-color: #f7f7f7;
 @mixin border-radius($radius) {
 	-webkit-border-radius: $radius;
@@ -129,8 +129,18 @@ img {
   padding: 0.2em 0;
 }
 
+.form-control {
+  width: 200px;
+  margin: auto;
+}
+
 body {
   padding: 0;
+  color: #6d6d6d;
+}
+
+.clue {
+  font-size: 1.5em;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
