--- a/app/views/clueview2.html
+++ b/app/views/clueview2.html
@@ -42,10 +42,10 @@
   You're out of hints!
   </p>
 
-    <a class="btn btn-lg btn-success" ng-init = "view2 = true" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
+    <a class="btn btn-lg btn-info" ng-init = "view2 = true" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
 
-    <button id= "hint2" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Hint</button>
-    <a id= "skip" class="btn btn-lg btn-success" ng-click="reloadRoute()">Skip</span></a>
+    <button id= "hint2" class="btn btn-lg btn-info" ng-click="count = count + 1" ng-init="count=0">Hint</button>
+    <a id= "skip" class="btn btn-lg btn-info" ng-click="reloadRoute()">Skip</span></a>
 
 
   </div>
