--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -46,9 +46,9 @@
   You're out of hints!
   </p>
 
-          <a class="btn btn-lg btn-success" ng-init = "view3 = true" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
-          <button id= "hint1" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Hint</button>
-          <a id= "skip" class="btn btn-lg btn-success" ng-click="reloadRoute()">Skip</span></a>
+          <a class="btn btn-lg btn-info" ng-init = "view3 = true" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
+          <button id= "hint1" class="btn btn-lg btn-info" ng-click="count = count + 1" ng-init="count=0">Hint</button>
+          <a id= "skip" class="btn btn-lg btn-info" ng-click="reloadRoute()">Skip</span></a>
       <!-- Trigger/Open The Modal -->
       <!-- The Modal -->
       <div id="myModal" class="modal">
