--- a/app/views/modal-view-winning.html
+++ b/app/views/modal-view-winning.html
@@ -3,7 +3,7 @@
     <h3 class="modal-title">  <img src="images/Badge-icon.png"><br> Congratulations!  You made it to {{fullname}}.</h3>
 </div>
 <div class="modal-body">
-   <a class="btn btn-lg btn-success" ng-href="#/clueview2" ng-click="vm.close()">Next Destination!</span></a>
+   <a class="btn btn-lg btn-info" ng-href="#/clueview2" ng-click="vm.close()">Next Destination!</span></a>
 </div>
 <div class="modal-footer">
     <button class="btn btn-info" ng-click="vm.close()"><span class="glyphicon glyphicon-remove"></span></button>
