--- a/app/views/winningview.html
+++ b/app/views/winningview.html
@@ -4,7 +4,7 @@
       <br> Congratulations!  You made it to {{fullname}}. You completed the scavenger hunt!</h3>
 </div>
 <div class="modal-body">
-  <a class="btn btn-lg btn-success" ng-href="#/main" ng-click="vm.close()">Play again</span></a>
+  <a class="btn btn-lg btn-info" ng-href="#/main" ng-click="vm.close()">Play again</span></a>
 </div>
 <div class="modal-footer">
     <button class="btn btn-info" ng-click="vm.close()"><span class="glyphicon glyphicon-remove"></span></button>
