--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -5,7 +5,13 @@
 
 
 <h3>Good luck catching your first ButterFly!</h3>
+
+<div class="jumbotron">
+
 <p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
+
+
+
 <div class="nav-progress">
 	<div class="active icon">
 		εїз
@@ -27,9 +33,12 @@
 		εїз
 	</div>
 </div>
+
 <br>
   <div id ="map"></div>
 <br>
+
+
 <p class="clue" ng-show="count===1">
 {{category}}
 </p>
@@ -51,5 +60,6 @@
       <a class="btn btn-lg btn-success" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
       <button id= "hint1" class="btn btn-lg btn-success" ng-init = "view1 = true" ng-click="count = count + 1" ng-init="count=0">Hint</button>
       <a id= "skip" class="btn btn-lg btn-success" ng-click="reloadRoute()">Skip</span></a>
+</div>
   </div>
 </div>
