--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -1,6 +1,7 @@
 
 <div ng-controller="Clueview3Ctrl">
 <h3>Catch one more ButterFly to win!</h3>
+<div class="jumbotron">
 <p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 <div class="nav-progress">
 	<div class="complete">
@@ -49,28 +50,8 @@
           <a class="btn btn-lg btn-success" ng-init = "view3 = true" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
           <button id= "hint1" class="btn btn-lg btn-success" ng-click="count = count + 1" ng-init="count=0">Hint</button>
           <a id= "skip" class="btn btn-lg btn-success" ng-click="reloadRoute()">Skip</span></a>
-      <!-- Trigger/Open The Modal -->
-      <!-- The Modal -->
-      <div id="myModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-          <span class="close">x</span>
 
-          <h1 id="totalPoints">Total Points: 100</h1>
-<<<<<<< HEAD
-
-					<li><fb:login-button autologoutlink="true"></fb:login-button></li>
-
-					<li>
-					<div class="fb-share-button"
-					data-href="http://www.facebook.com"
-					data-layout="button_count"></div>
-					</li>
-
-=======
->>>>>>> geolocationfeature2
-          <p><a id="clicker" ng-href="#/main">Click to play again.</a></p>
-        </div>
       </div>
 		</div>
 	</div>
+</div>
