--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,17 +5,19 @@
     When you're ready to begin your scavenger hunt, be sure your GPS is turned on and click start!
   </p>
 
-  <p><a class="btn btn-lg btn-success" ng-href="#/clueview1">Start Hunt!<span class="glyphicon glyphicon-ok"></span></a></p>
-
   <div id="accordion">
     <h5 class="accordion-toggle">Click for Directions</h5>
     <div class="accordion-content">
-      <p><strong>Step 1:</strong> Start Hunt!</p>
+      <p><strong>Step 1:</strong> Read directions, then click Start Hunt!</p>
       <p><strong>Step 2:</strong> Click the Hint button to learn about your destination.</p>
       <p><strong>Step 3:</strong> If you need to, click the Skip button for a new destination.</p>
       <p><strong>Step 4:</strong> Check In when you arrive.</p>
       <p><strong>Step 5:</strong> Find 2 more places to win!</p>
     </div>
   </div>
+
+  <p><a class="btn btn-lg btn-success" ng-href="#/clueview1">Start Hunt!<span class="glyphicon glyphicon-ok"></span></a></p>
+
+
 
 </div>
