--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,27 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   font-size: 2.5em;
 }
 
+.buttons {
+  display: inline;
+}
+.jumbotron h1 {
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+}
+.form-control{
+  display: inline;
+}
+
+.start-button {
+  margin-top: 20px;
+}
+
+h2.title {
+  background-color: #FFF;
+  padding: 10px;
+  border-radius: 20px;
+}
+
 //styling for progress bar
 $primary-color: #5bc0de;
 $nav-border-color: #5bc0de;
@@ -131,12 +152,18 @@ img {
 
 .form-control {
   width: 200px;
-  margin: auto;
+  margin: 10px auto;
 }
+
 
 body {
   padding: 0;
   color: #6d6d6d;
+}
+
+
+.main-butterfly {
+  width: 50%;
 }
 
 .clue {
