added butterfly icons

--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -7,7 +7,7 @@
 <p>Your destination is somewhere in the blue circle. Click for a hint below.</p>
 <div class="nav-progress">
 	<div class="complete">
-		εїз
+		<img class="icon" src="images/butterflyicon.png">
     <div class="arrow-wrapper">
       <div class="arrow-cover">
         <div class="arrow"></div>
@@ -15,7 +15,7 @@
     </div>
 	</div>
 	<div class="complete">
-		εїз
+		<img class="icon" src="images/butterflyicon.png">
     <div class="arrow-wrapper">
       <div class="arrow-cover">
         <div class="arrow"></div>
@@ -23,7 +23,7 @@
     </div>
 	</div>
 	<div class="active">
-		εїз
+		<img class="icon" src="images/butterflyicon.png">
 	</div>
 </div>
 <br>
