--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -279,6 +279,12 @@ body {
     font-size: 28px;
     font-weight: bold;
 }
+
+.icon {
+  width: 20px;
+  padding: 0;
+  margin: 0
+}
 .close:hover,
 .close:focus {
     color: black;
