--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -13,24 +13,24 @@
 
 
 <div class="nav-progress">
-	<div class="active icon">
-		εїз
+	<div class="active">
+		<img class="icon" src="images/butterflyicon.png">
     <div class="arrow-wrapper">
       <div class="arrow-cover">
         <div class="arrow"></div>
       </div>
     </div>
 	</div>
-	<div class = "icon">
-		εїз
+	<div>
+		<img class="icon" src="images/butterflyicon.png">
     <div class="arrow-wrapper">
       <div class="arrow-cover">
         <div class="arrow"></div>
       </div>
     </div>
 	</div>
-	<div class = "icon">
-		εїз
+	<div>
+		<img class="icon" src="images/butterflyicon.png">
 	</div>
 </div>
 
