fixed clue order and added heading for each one

--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -40,17 +40,21 @@
 
 
 <p class="clue" ng-show="count===1">
+<strong> Category </strong> <br>
 {{category}}
 </p>
   <p class= "clue" ng-show="count===2">
+<strong> Yelp Review Snippit </strong> <br>
   {{snippetReplaced}}
 </p>
   <p class="clue"ng-show="count===3"><img ng-src="{{imgurl}}">
   </p>
   <p class="clue" ng-show="count===4">
+    <strong> Street </strong> <br>
     {{street}}
   </p>
   <p class="clue" ng-show="count===5">
+    <strong> Shuffled Name </strong> <br>
   {{shuffledName}}
   </p>
   <p class="clue" ng-show="count===6">
