--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,6 +14,7 @@
       <option value="museum">Museums</option>
       <option value="shopping">Shops</option>
       <option value="park">Parks</option>
+      <option value="">Surprise Me!</option>
     </select>
 
   <div id="accordion">
