--- a/app/views/clueview3.html
+++ b/app/views/clueview3.html
@@ -33,21 +33,27 @@
 
   <div  ng-controller="YelpapiCtrl as vm">
     <p class="clue" ng-show="count===1">
+    <strong> Category </strong> <br>
     {{category}}
     </p>
-    <p class= "clue" ng-show="count===2">
-    {{snippetReplaced}}
-    <p class="clue"ng-show="count===3"><img ng-src="{{imgurl}}">
+      <p class= "clue" ng-show="count===2">
+    <strong> Yelp Review Snippit </strong> <br>
+      {{snippetReplaced}}
     </p>
-    <p class="clue" ng-show="count===4">
-      {{street}}
-    </p>
-    <p class="clue" ng-show="count===5">
-    {{shuffledName}}
-  </p>
-  <p class="clue" ng-show="count===6">
-  You're out of hints!
-  </p>
+      <p class="clue"ng-show="count===3"><img ng-src="{{imgurl}}">
+      </p>
+      <p class="clue" ng-show="count===4">
+        <strong> Street </strong> <br>
+        {{street}}
+      </p>
+      <p class="clue" ng-show="count===5">
+        <strong> Shuffled Name </strong> <br>
+      {{shuffledName}}
+      </p>
+      <p class="clue" ng-show="count===6">
+      You're out of hints!
+      </p>
+
           <a class="btn btn-lg btn-info" ng-init = "view3 = true" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
           <button id= "hint1" class="btn btn-lg btn-info" ng-click="count = count + 1" ng-init="count=0">Hint</button>
           <a id= "skip" class="btn btn-lg btn-info" ng-click="reloadRoute()">Skip</span></a>
