added default to select

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,6 +8,7 @@
   <div class="form-group">
   <input type="text" class="form-control" name="name" placeholder="Detroit" ng-model="city"/>
   <select class="form-control" name="term" ng-model="term">
+      <option value="" disabled>Choose an adventure</option>
       <option value="restaurant">Restaurants</option>
       <option value="bar">Coffee Shops</option>
       <option value="coffee shop">Bars</option>
