--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -48,13 +48,14 @@ $bg-color: #f7f7f7;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	-webkit-appearance: none;
+  margin: auto;
+  text-align: center;
 }
 .nav-progress {
 	display: table;
 	overflow: hidden;
-	margin: 0;
+	margin: auto;
 	width: 100%;
-  max-width: 400px;
   min-width: 200px;
 	height: 50px;
 	border: 1px solid $nav-border-color;
@@ -110,12 +111,12 @@ $bg-color: #f7f7f7;
 
 	#accordion {
 		margin: auto;
-		width: 75%;
+		width: 55%;
 	}
 
   .accordion-toggle {
 		cursor: pointer;
-		text-decoration: underline;
+		font-size: 21px;
 	}
   .accordion-content {
 		display: none;
@@ -127,8 +128,11 @@ $bg-color: #f7f7f7;
 
 
 #map {
-  height: 400px;
-  width: 400px;
+  height: 80%;
+  min-height: 25em;
+  width: 100%;
+  min-width: 15em;
+  margin: auto;
 }
 
 img {
@@ -215,6 +219,9 @@ body {
   .btn {
     font-size: 21px;
     padding: 14px 24px;
+    margin-top: 14px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
@@ -318,8 +325,12 @@ body {
 
 #teamtitle, .team {
   text-align: center;
-
 }
+
+#teamtitle {
+  font-size: px;
+}
+
 
 .pics {
   margin: 1em;
