--- a/app/views/clueview1.html
+++ b/app/views/clueview1.html
@@ -61,6 +61,7 @@
   You're out of hints!
   </p>
 
+  {{name}}
 
 	<a class="btn btn-lg btn-info" ng-click= "checkGeoClick()">Check In! <span class="glyphicon glyphicon-ok"></span></a>
 	<button id= "hint1" class="btn btn-lg btn-info" ng-init = "view1 = true" ng-click="count = count + 1" ng-init= "count=0">Hint</button>
