--- a/app/views/winningview.html
+++ b/app/views/winningview.html
@@ -1,11 +1,10 @@
-<div ng-controller="YelpapiCtrl">
+
 <div class="modal-header">
     <h3 class="modal-title">  <img src="images/Badge-icon.png"> <img src="images/Badge-icon.png"> <img src="images/Badge-icon.png"><br>
-      <br> Congratulations!  You made it to {{fullname}}. You completed the scavenger hunt!</h3>
+      <br> Congratulations!  You made it to your destination! You completed the scavenger hunt!</h3>
 </div>
 <div class="modal-body">
   <a class="btn btn-lg btn-info" ng-href="#/main" ng-click="vm.close()">Play again</span></a>
 </div>
 <div class="modal-footer">
     <button class="btn btn-info" ng-click="vm.close()"><span class="glyphicon glyphicon-remove"></span></button>
-</div>
