edited team page

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,5 +1,5 @@
 
-	<p id="teamtitle"><strong>TEAM BUTTERFLY</strong></p>
+	<h2 id="teamtitle"><strong>TEAM BUTTERFLY</strong></h2>
 	<div class="jumbotron">
 	<container>
 		<div class="row">
@@ -9,7 +9,7 @@
 						JENNIFER KRON
 					</div>
 					<div class="pics">
-						<img src="images/jen.jpg"/>
+						<img src="images/jen.jpg" class= "headshot"/>
 					</div>
 					<div class="links">
 
@@ -30,7 +30,7 @@
 						STEVE ANTHONY
 					</div>
 					<div class="pics">
-						<img src="images/steve.jpg"/>
+						<img src="images/steve.jpg" class= "headshot"/>
 					</div>
 					<div class="links">
 
@@ -52,7 +52,7 @@
 						TRAVIS STUMBO
 					</div>
 					<div class="pics">
-						<img src="images/travis.jpg"/>
+						<img src="images/travis.jpg" class= "headshot"/>
 					</div>
 					<div class="links">
 
