fixed value in select menu

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,8 +10,8 @@
   <select class="form-control" name="term" ng-model="term">
       <option value="" disabled>Choose an adventure</option>
       <option value="restaurant">Restaurants</option>
-      <option value="bar">Coffee Shops</option>
-      <option value="coffee shop">Bars</option>
+      <option value="coffee">Coffee Shops</option>
+      <option value="bars">Bars</option>
       <option value="museum">Museums</option>
       <option value="shopping">Shops</option>
       <option value="park">Parks</option>
