--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,7 +21,7 @@
   <div id="accordion">
     <h5 class="accordion-toggle">Click for Directions</h5>
     <div class="accordion-content">
-      <p><strong>Step 1:</strong> Read directions, then click Start Hunt!</p>
+      <p><strong>Step 1:</strong> Choose your location and type of adventure and click Start Hunt!</p>
       <p><strong>Step 2:</strong> Click the Hint button to learn about your destination.</p>
       <p><strong>Step 3:</strong> If you need to, click the Skip button for a new destination.</p>
       <p><strong>Step 4:</strong> Check In when you arrive.</p>
